lib/musicality/notation/parsing/slur_mark_parsing.treetop
module Musicality
module Parsing

grammar SlurMark
  rule slur_mark
    begin_slur / end_slur
  end

  rule begin_slur
    "(" {
      def to_slur_mark; return Musicality::SlurMarks::BEGIN_SLUR; end
    }
  end

  rule end_slur
    ")" {
      def to_slur_mark; return Musicality::SlurMarks::END_SLUR; end
    }
  end

end

end
end
